--- a/Msafe/MSafe/res/layout/rubbish_show_itemlayout.xml
+++ b/Msafe/MSafe/res/layout/rubbish_show_itemlayout.xml
@@ -5,87 +5,100 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/padding_list"
-        android:background="@color/white"
-        android:orientation="vertical"
-        android:visibility="visible" >
-
-        <TextView
-            android:id="@+id/show_title"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:text="@string/saftytitle_mainlayout_background_up"
-            android:textColor="@color/black"
-            android:textSize="@dimen/textsize_mainactiviy_top" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/checked"
-            android:gravity="center"
-            android:text="ALL"
-            android:textColor="@color/black"
-            android:textSize="@dimen/textsize_title_num" />
-    </RelativeLayout>
-
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="1dp"
-        android:background="@color/green_breathecircleview_background" />
-
-    <RelativeLayout
-        android:id="@+id/grid_show_rubbish_total"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
         android:orientation="vertical" >
-        <org.com.lix_.plugin.AListView
-            android:id="@+id/grid_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/white"
-            android:visibility="invisible"
-            android:listSelector="@drawable/selector_highlight_button"
-            android:paddingLeft="@dimen/padding_list"
-            android:paddingRight="@dimen/padding_list" />
 
-        <LinearLayout
-            android:id="@+id/rubbish_btn_clear"
+        <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:background="@color/white"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            android:visibility="visible" >
+
+            <TextView
+                android:id="@+id/show_title"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/rubbish_setting_tag_bg"
+                android:gravity="center_vertical|left"
+                android:paddingBottom="@dimen/padding_list"
+                android:paddingLeft="@dimen/padding_list1"
+                android:paddingTop="@dimen/padding_list"
+                android:text="@string/setting_rubbish_str"
+                android:textColor="@color/black"
+                android:textSize="@dimen/rubbish_setting_tag_size" />
 
             <View
                 android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:background="@color/green_breathecircleview_background" />
+                android:layout_height="@dimen/divider_height"
+                android:layout_below="@id/show_title"
+                android:background="@color/tab_textcolor_selected" />
 
             <TextView
-                android:id="@+id/clear_itemlayout"
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:clickable="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="@dimen/padding_list1"
+                android:background="@drawable/checked"
                 android:gravity="center"
-                android:paddingBottom="@dimen/padding_list"
-                android:paddingTop="@dimen/padding_list"
-                android:text="@string/clear" />
-        </LinearLayout>
-        
-        <TextView
-            android:id="@+id/no_rubbish_txt"
-            android:layout_width="wrap_content"
+                android:text="All"
+                android:textColor="@color/white"
+                android:textSize="@dimen/txt_title_rubbish" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/grid_show_rubbish_total"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:visibility="invisible"
-            android:layout_centerInParent="true"
-            android:text="@string/null_rubbish_txt" />
+            android:background="@color/white"
+            android:orientation="vertical" >
+
+            <org.com.lix_.plugin.AListView
+                android:id="@+id/grid_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:listSelector="@drawable/selector_highlight_button"
+                android:paddingLeft="@dimen/padding_list"
+                android:paddingRight="@dimen/padding_list1"
+                android:visibility="invisible" />
+
+            <TextView
+                android:id="@+id/no_rubbish_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="@string/null_rubbish_txt"
+                android:visibility="invisible" />
+        </RelativeLayout>
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/grid_item_divi"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="11"
+        android:background="@color/white" >
+
+        <View
+            android:id="@+id/rubbish_clear_button_divider"
+            android:layout_width="fill_parent"
+            android:layout_height="@dimen/divider_height"
+            android:background="@color/gray_mainactivity_btn_press" />
+
+        <org.com.lix_.plugin.ButtonPlugin
+            android:id="@+id/rubbish_btn_clear"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:paddingBottom="@dimen/padding_list"
+            android:paddingLeft="@dimen/padding_list4"
+            android:paddingRight="@dimen/padding_list4"
+            android:paddingTop="@dimen/padding_list"
+            android:textColor="@color/red" />
     </RelativeLayout>
 
 </LinearLayout>
