--- a/Msafe/MSafe/res/values/dimens.xml
+++ b/Msafe/MSafe/res/values/dimens.xml
@@ -35,4 +35,12 @@
        <dimen name="main_scan_padding2">58dp</dimen>
       <dimen name="divider_height_half">0.5dp</dimen>
       <dimen name="txt_title_rubbish">16dp</dimen>
+      
+      <!-- 垃圾清理设置中相关属性 -->
+      <dimen name="rubbish_setting_tag_size">22dp</dimen>
+      <dimen name="rubbish_setting_title_size">16dp</dimen>
+      <dimen name="rubbish_setting_des_size">14dp</dimen>
+      <dimen name="rubbish_setting_divider_height">2dp</dimen>
+      <!-- 所有的列表item中app的图标 -->
+      <dimen name="all_item_app_icon_size">50dp</dimen>
 </resources>
