--- a/Msafe/MSafe/res/layout/rubbish_show_itemlayout.xml
+++ b/Msafe/MSafe/res/layout/rubbish_show_itemlayout.xml
@@ -38,6 +38,7 @@
                 android:background="@color/tab_textcolor_selected" />
 
             <TextView
+                android:id="@+id/total_rubbish_clickitems"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
