--- a/Msafe/MSafe/res/anim/anim_loading2.xml
+++ b/Msafe/MSafe/res/anim/anim_loading2.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <animated-rotate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:drawable="@drawable/small_progress"
+    android:drawable="@drawable/green_progress"
     android:pivotX="50.0%"
-    android:pivotY="50.0%" />
+    android:pivotY="50.0%"/>
