--- a/Msafe/MSafe/res/layout/item_fileadmin.xml
+++ b/Msafe/MSafe/res/layout/item_fileadmin.xml
@@ -2,52 +2,75 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="@drawable/list_item_selector"
     android:orientation="horizontal"
     android:paddingBottom="@dimen/padding_list"
     android:paddingTop="@dimen/padding_list" >
 
-    <LinearLayout
-        android:id="@+id/grid_item_rubbish_des"
+    <ImageView
+        android:id="@+id/fileadmin_item_image"
+        android:layout_width="@dimen/all_item_app_icon_size"
+        android:layout_height="@dimen/all_item_app_icon_size"
+        android:layout_centerVertical="true"
+		android:layout_marginLeft="@dimen/padding_list"
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/ic_launcher" />
+
+    <RelativeLayout
+        android:id="@+id/filemadin_item_rubbish_des"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@id/grid_item_image"
+        android:layout_marginLeft="@dimen/padding_list"
+        android:layout_toRightOf="@id/fileadmin_item_image"
         android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/item_name"
+            android:id="@+id/fileadminitem_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/grid_item_check0"
-            android:textSize="@dimen/gird_item_up_textsize" />
+            android:textColor="@color/black"
+            android:textSize="@dimen/rubbish_setting_title_size" />
 
         <TextView
-            android:id="@+id/item_desc"
+            android:id="@+id/fileadminitem_cache"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/fileadminitem_name"
+            android:layout_marginTop="@dimen/padding_list_helf"
+            android:background="@color/item_cache_bg"
+            android:text="60M"
+            android:textColor="@color/detail_rubbish_scan_txtcolor"
+            android:textSize="@dimen/rubbish_setting_des_size" />
+
+        <TextView
+            android:id="@+id/fileadminitem_desc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/fileadminitem_name"
+            android:layout_marginLeft="@dimen/padding_list_helf"
+            android:layout_marginTop="@dimen/padding_list_helf"
+            android:layout_toRightOf="@id/fileadminitem_cache"
             android:text="@string/grid_item_check0"
-            android:textSize="@dimen/gird_item_down_textsize" />
-    </LinearLayout>
+            android:textColor="@color/detail_rubbish_scan_txtcolor"
+            android:textSize="@dimen/rubbish_setting_des_size" />
+    </RelativeLayout>
 
-   <ImageView
-       		android:src="@drawable/checked"
-            android:id="@+id/grid_rubbish_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:paddingRight="0dp"
-            android:layout_alignParentRight="true"
-            android:button="@drawable/checked_style"
-            android:clickable="false" />
-
-   <ImageView
-       android:id="@+id/grid_item_image"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_alignParentLeft="true"
-       android:layout_centerVertical="true"
-       android:contentDescription="@string/app_name"
-       android:src="@drawable/doc_icon" />
+    <TextView
+        android:id="@+id/fileadmin_rubbish_checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/checked"
+        android:clickable="false"
+        android:focusable="false"
+        android:gravity="center"
+        android:paddingRight="0dp"
+        android:text="@string/duihao"
+        android:textColor="@color/white"
+        android:layout_marginRight="@dimen/padding_list1"
+        android:textSize="@dimen/txt_title_rubbish" />
 
 </RelativeLayout>
