--- a/Msafe/MSafe/res/values/styles.xml
+++ b/Msafe/MSafe/res/values/styles.xml
@@ -24,5 +24,11 @@
         <item name="android:minWidth">12dp</item>
         <item name="android:minHeight">12dp</item>
     </style>
-
+	<style name="progressbar_style2">
+        <item name="android:maxWidth">30dp</item>
+        <item name="android:maxHeight">30dp</item>
+        <item name="android:indeterminateDrawable">@anim/anim_loading2</item>
+        <item name="android:minWidth">30dp</item>
+        <item name="android:minHeight">30dp</item>
+    </style>
 </resources>
