结束了关于获取本地视频缩略图的工作，但是在checkbox本地化的研究中出现动画显示问题等bug 后期工作需要开展动画研究。主要关注点是卡顿之类的

--- a/Msafe/MSafe/res/layout/fileadmin.xml
+++ b/Msafe/MSafe/res/layout/fileadmin.xml
@@ -112,14 +112,17 @@
                 android:paddingTop="@dimen/padding_list"
                 android:layout_below="@id/fileadmin_tip_0"
                 android:background="@color/gray_mainactivity_btn_press"
-                android:paddingLeft="@dimen/padding_list"
-                android:paddingRight="@dimen/padding_list" />
+                android:layout_marginLeft="@dimen/padding_list"
+                android:layout_marginRight="@dimen/padding_list" />
         </RelativeLayout>
 
         <org.com.lix_.plugin.AListView
             android:id="@+id/fileadmin_list"
             android:layout_width="fill_parent"
+            android:dividerHeight="@dimen/divider_height_half"
             android:layout_height="match_parent"
+            android:paddingLeft="@dimen/padding_list"
+            android:paddingRight="@dimen/padding_list"
             android:background="@color/white"
             android:visibility="visible" />
     </LinearLayout>
