--- a/Msafe/MSafe/res/layout/item_fileadmin.xml
+++ b/Msafe/MSafe/res/layout/item_fileadmin.xml
@@ -63,14 +63,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/checked"
+        android:background="@drawable/removecheck"
         android:clickable="false"
         android:focusable="false"
         android:gravity="center"
         android:paddingRight="0dp"
         android:text="@string/duihao"
-        android:textColor="@color/white"
-        android:layout_marginRight="@dimen/padding_list1"
+        android:textColor="@android:color/transparent"
+        android:layout_marginRight="@dimen/padding_list_helf"
         android:textSize="@dimen/txt_title_rubbish" />
 
 </RelativeLayout>
