继续完成了关于自定义checkbox的复选逻辑，但是在listview的布局还是看着有些不好，继续完善

--- a/Msafe/MSafe/res/layout/fileadmin.xml
+++ b/Msafe/MSafe/res/layout/fileadmin.xml
@@ -121,6 +121,7 @@
             android:layout_width="fill_parent"
             android:dividerHeight="@dimen/divider_height_half"
             android:layout_height="match_parent"
+            android:scrollbars="none"
             android:paddingLeft="@dimen/padding_list"
             android:paddingRight="@dimen/padding_list"
             android:background="@color/white"
