--- a/Msafe/MSafe/res/layout/dialog_fileadmin_item.xml
+++ b/Msafe/MSafe/res/layout/dialog_fileadmin_item.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/list_item_selector"
+    android:background="@drawable/checkbox_default"
     android:orientation="horizontal"
     android:paddingBottom="@dimen/padding_list"
     android:paddingTop="@dimen/padding_list" >
 
     <ImageView
-        android:id="@+id/fileadmin_item_image"
+        android:id="@+id/fileadmin_itemclick_image"
         android:layout_width="@dimen/all_item_app_icon_size"
         android:layout_height="@dimen/all_item_app_icon_size"
         android:layout_centerVertical="true"
@@ -17,16 +17,16 @@
         android:src="@drawable/fileadmin_item_default" />
 
     <RelativeLayout
-        android:id="@+id/filemadin_item_rubbish_des"
+        android:id="@+id/filemadin_itemclick_rubbish_des"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/padding_list"
-        android:layout_toRightOf="@id/fileadmin_item_image"
+        android:layout_toRightOf="@id/fileadmin_itemclick_image"
         android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/fileadminitem_name"
+            android:id="@+id/fileadminitemclick_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/grid_item_check0"
@@ -37,7 +37,7 @@
             android:id="@+id/fileadminitem_cache"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/fileadminitem_name"
+            android:layout_below="@id/fileadminitemclick_name"
             android:layout_marginTop="@dimen/padding_list_helf"
             android:background="@color/item_cache_bg"
             android:text="60M"
@@ -48,7 +48,7 @@
             android:id="@+id/fileadminitem_desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/fileadminitem_name"
+            android:layout_below="@id/fileadminitemclick_name"
             android:layout_marginLeft="@dimen/padding_list_helf"
             android:layout_marginTop="@dimen/padding_list_helf"
             android:layout_toRightOf="@id/fileadminitem_cache"
@@ -57,20 +57,5 @@
             android:textSize="@dimen/rubbish_setting_des_size" />
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/fileadmin_rubbish_checkbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:background="@drawable/removecheck"
-        android:clickable="false"
-        android:focusable="false"
-        android:gravity="center"
-        android:paddingRight="0dp"
-        android:layout_marginRight="@dimen/padding_list_helf"
-        android:text="@string/duihao"
-        android:textColor="@android:color/transparent"
-        android:textSize="@dimen/txt_title_rubbish" />
 
 </RelativeLayout>
