--- a/Msafe/MSafe/res/values/colors.xml
+++ b/Msafe/MSafe/res/values/colors.xml
@@ -25,8 +25,12 @@
     <color name="detail_rubbish_scan_item_">#ededed</color>
     <color name="detail_rubbish_scan_txtcolor">#7b7b7b</color>
     <!-- 大文件管理 -->
-    <color name="item_cache_bg">#efbf00</color>
+    <color name="item_cache_bg">#fcb704</color>
     <!-- listview item的selector -->
 	<color name="item_fouce">#f5f5f5</color>
 	<color name="item_touch">#ebebeb</color>
+	<color name="shadowcolor">#77000000</color>
+	<!-- 大文件管理 弹出对话框字体颜色 -->
+	<color name="fileadmin_pop_filetype_color_enable">#42b56a</color>
+	<color name="d5_alph">#55d5d5d5</color>
 </resources>
