--- a/Msafe/MSafe/res/layout/dialog_fileadmin_item.xml
+++ b/Msafe/MSafe/res/layout/dialog_fileadmin_item.xml
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/pop_dialog_fileadmin_item"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/checkbox_default"
-    android:orientation="horizontal"
-    android:paddingBottom="@dimen/padding_list"
-    android:paddingTop="@dimen/padding_list" >
+    android:background="@color/white" >
 
     <ImageView
         android:id="@+id/fileadmin_itemclick_image"
         android:layout_width="@dimen/all_item_app_icon_size"
         android:layout_height="@dimen/all_item_app_icon_size"
-        android:layout_centerVertical="true"
-		android:layout_marginLeft="@dimen/padding_list_helf"
-        android:contentDescription="@string/app_name"
+        android:layout_marginLeft="@dimen/dialog_fileadmin_item_marginleft"
+        android:layout_marginTop="@dimen/padding_list2"
         android:src="@drawable/fileadmin_item_default" />
 
     <RelativeLayout
         android:id="@+id/filemadin_itemclick_rubbish_des"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/padding_list"
+        android:layout_marginTop="@dimen/padding_list2"
         android:layout_toRightOf="@id/fileadmin_itemclick_image"
         android:orientation="vertical" >
 
@@ -29,7 +26,8 @@
             android:id="@+id/fileadminitemclick_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/grid_item_check0"
+            android:layout_marginTop="@dimen/divider_height"
+            android:text="V51031-173625.mp4"
             android:textColor="@color/black"
             android:textSize="@dimen/rubbish_setting_title_size" />
 
@@ -38,24 +36,97 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/fileadminitemclick_name"
-            android:layout_marginTop="@dimen/padding_list_helf"
+            android:layout_marginTop="@dimen/padding_list"
             android:background="@color/item_cache_bg"
             android:text="60M"
             android:textColor="@color/detail_rubbish_scan_txtcolor"
             android:textSize="@dimen/rubbish_setting_des_size" />
-
-        <TextView
-            android:id="@+id/fileadminitem_desc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/fileadminitemclick_name"
-            android:layout_marginLeft="@dimen/padding_list_helf"
-            android:layout_marginTop="@dimen/padding_list_helf"
-            android:layout_toRightOf="@id/fileadminitem_cache"
-            android:text="@string/grid_item_check0"
-            android:textColor="@color/detail_rubbish_scan_txtcolor"
-            android:textSize="@dimen/rubbish_setting_des_size" />
     </RelativeLayout>
 
+    <TextView
+        android:id="@+id/dialog_fileadmin_item_filetype"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/fileadmin_itemclick_image"
+        android:layout_marginLeft="@dimen/dialog_fileadmin_item_marginleft"
+        android:layout_marginTop="@dimen/padding_list"
+        android:text="来源:录像"
+        android:textColor="@color/dialog_fileadmin_item_textcolorgray" />
+
+    <LinearLayout
+        android:id="@+id/dialog_fileadmin_item_filepathlayout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/dialog_fileadmin_item_filetype"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/dialog_fileadmin_item_filepath"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dialog_fileadmin_item_marginleft"
+            android:layout_marginTop="@dimen/padding_list_helf_tri"
+            android:layout_weight="1"
+            android:text="文件路径:sdcard/DCIM/Vidio/V51031-173625.mp4"
+            android:textColor="@color/dialog_fileadmin_item_textcolorgray" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:text="" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/dialog_fileadmin_item_modifytime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/dialog_fileadmin_item_filepathlayout"
+        android:layout_marginBottom="@dimen/padding_list"
+        android:layout_marginLeft="@dimen/dialog_fileadmin_item_marginleft"
+        android:layout_marginTop="@dimen/padding_list_helf_tri"
+        android:text="修改时间: 2015/10/31 17:37"
+        android:textColor="@color/dialog_fileadmin_item_textcolorgray" />
+
+    <View
+        android:id="@+id/dialog_fileadmin_item_div"
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/divider_height_half"
+        android:layout_below="@id/dialog_fileadmin_item_modifytime"
+        android:background="@color/gray_mainactivity_btn_press" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/dialog_fileadmin_item_div"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:paddingBottom="@dimen/padding_list2"
+            android:paddingTop="@dimen/padding_list2"
+            android:text="@string/cancel"
+            android:textColor="@color/dialog_fileadmin_item_cancelcolor"
+            android:textSize="@dimen/textsize_breathecircle" />
+
+        <View
+            android:layout_width="@dimen/divider_height_half"
+            android:layout_height="fill_parent"
+            android:background="@color/gray_mainactivity_btn_press" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:paddingBottom="@dimen/padding_list2"
+            android:paddingTop="@dimen/padding_list2"
+            android:text="@string/delete"
+            android:textColor="@color/dialog_fileadmin_item_deletecolor"
+            android:textSize="@dimen/textsize_breathecircle" />
+    </LinearLayout>
 
 </RelativeLayout>
