--- a/Msafe/MSafe/res/values/dimens.xml
+++ b/Msafe/MSafe/res/values/dimens.xml
@@ -13,6 +13,7 @@
     <dimen name="stroke_circle">10dp</dimen>
     <dimen name="clear_btn_size">20dp</dimen>
     <dimen name="padding_list2">20dp</dimen>
+    <dimen name="padding_list_helf_tri">3dp</dimen>
     <dimen name="padding_list4">30dp</dimen>
     <dimen name="padding_list">10dp</dimen>
     <dimen name="padding_list1">15dp</dimen>
@@ -43,5 +44,5 @@
     <dimen name="rubbish_setting_divider_height">2dp</dimen>
     <!-- 所有的列表item中app的图标 -->
     <dimen name="all_item_app_icon_size">50dp</dimen>
-
+	<dimen name="dialog_fileadmin_item_marginleft">22dp</dimen>
 </resources>
